--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hot Gadget</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css" />
+    <title>Hot Gadgets</title>
+  </head>
 <body>
   <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between bg-white">
         <a class="navbar-brand" href="#"> <img class="w-75" src="logo.png" alt=""> </a>
         <div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,7 +23,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="#">Product</a>
             <a class="nav-item nav-link" href="#">About US</a>
             <a class="nav-item nav-link" href="#">Contact US</a>
@@ -27,6 +32,61 @@
         </div>
       </nav>
     </div>
+
+    <div class="container">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row  d-flex align-items-center">
+              <div class="col-md-6">
+                <h2>MacBook Pro</h2>
+                <p class="text-muted"><small>Contrary to popular belief, Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptate, provident obcaecati magni eum nemo.</small></p>
+                    <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
+                  </div>
+              <div class="col-md-6"> <img src="banner-products/product-1.png" class="d-block w-100" alt="..."></div>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div class="row  d-flex align-items-center">
+              <div class="col-md-6">
+                <h2>Google Mini</h2>
+                <p class="text-muted"><small>LContrary to popular belief, Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptate, provident obcaecati magni eum nemo.</small></p>
+                    <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
+                  </div>
+              <div class="col-md-6"> <img src="banner-products/slider-1.png" class="d-block w-100" alt="..."></div>
+          </div>
+        </div>
+          
+          <div class="carousel-item">
+            <div class="row d-flex align-items-center">
+              <div class="col-md-6">
+                <h2>JBL Speaker</h2>
+                <p class="text-muted"><small>Contrary to popular belief, Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptate, provident obcaecati magni eum nemo.</small></p>
+                <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
+              </div>
+              <div class="col-md-6">
+                <img src="banner-products/slider-3.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+          
 
 
 
