--- a/index.html
+++ b/index.html
@@ -88,15 +88,14 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-    </div>
+    </div> <br>
 
   <!--Smartphone-->
   <div class="container">
     <div class="d-flex justify-content-between">
       <h4>Smartphone</h4>
-    <small id="see">See All</small>
-    </div>
-    
+      <p><small id="see">See All</small></p>
+    </div> <br>
     
     <div class="card-deck text-center">
       <div class="card">
@@ -129,9 +128,44 @@
         </div>
       </div>
     </div>
+</div> <br>
+
+<!--Laptop-->
+<div class="container">
+  <div class="d-flex justify-content-between">
+    <h4>Laptop</h4>
+    <p><small id="see">See All</small></p>
+  </div> <br>
+  <div class="card-deck text-center">
+    <div class="card">
+      <img src="laptop/product-1.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Asus Vivobook</h5>
+        <p class="card-text">Some quick example text to build on the card title.</p>
+        <h4>$699</h4>
+        <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
+      </div>
+    </div>
+    <div class="card">
+      <img src="laptop/product-2.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Razer Blade 15</h5>
+        <p class="card-text">Some quick example text to build on the card title.</p>
+        <h4>$699</h4>
+        <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
+      </div>
+    </div>
+    <div class="card">
+      <img src="laptop/product-3.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Xiaomi Mi Notebook Pro</h5>
+        <p class="card-text">Some quick example text to build on the card title.</p>
+        <h4>$699</h4>
+        <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
+      </div>
+    </div>
+  </div>
 </div>
-
-
 
 
 
