categories menu done

--- a/index.html
+++ b/index.html
@@ -165,7 +165,15 @@
       </div>
     </div>
   </div>
-</div>
+</div> <br>
+
+<!--categories-->
+
+  <div class="container">
+  <div class="d-flex flex-column align-items-center">
+    <h4>Categories</h4>
+    <div class="underline-block"></div>
+  </div>
 
 
 
