--- a/index.html
+++ b/index.html
@@ -173,7 +173,36 @@
   <div class="d-flex flex-column align-items-center">
     <h4>Categories</h4>
     <div class="underline-block"></div>
+  </div> <br><br>
+  
+  <div class="row">
+    <div class="col-md-3 d-flex flex-column justify-content-center">
+      <div class="card d-flex align-items-center">
+        <img src="categories/bag.png" class="card-img-top w-50 pt-4 " alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Bag</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3 ">
+      <div class="card d-flex align-items-center mb-3">
+        <img src="categories/perfume.png" class="card-img-top w-50 pt-4" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Beauty</h5>
+        </div>
+      </div>
+      <div class="card d-flex align-items-center mb-3">
+        <img src="categories/shoe.png" class="card-img-top w-50 pt-4" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Shoes</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <img src="categories/pale-order.png" class="img-fluid" alt="">
+    </div>
   </div>
+  
 
 
 
