--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
 
 <body>
+
   <!--navbar-->
   <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between bg-white">
@@ -96,7 +97,7 @@
       <h4>Smartphone</h4>
       <p><small id="see">See All</small></p>
     </div> <br>
-    
+
     <div class="card-deck text-center">
       <div class="card">
         <img src="phone/phone-2.png" class="card-img-top" alt="...">
@@ -168,7 +169,6 @@
 </div> <br>
 
 <!--categories-->
-
   <div class="container">
   <div class="d-flex flex-column align-items-center">
     <h4>Categories</h4>
@@ -201,14 +201,28 @@
     <div class="col-md-6">
       <img src="categories/pale-order.png" class="img-fluid" alt="">
     </div>
-  </div>
-  
+  </div> <br> <br>
+
+  <!--Contact-->
+  <div id="contact" class="container d-flex justify-content-center align-items-center">
+    <div>
+     <h3>LET'S STAY IN TOUCH</h3>
+     <h6>Get updates on sales, specials and more</h6>
+     <input class="form-control" type="Enter your email"> <br>
+     <button type="button" class="btn btn-dark">Submit <i class="fa fa-arrow-right"></i></button>
+    </div>
+ </div>
+
+<!--Footer-->
+<div class="container footer">
+<footer>
+  <small>©2023, Hot Gadgets. All right reserved by Muktadir Rahman. Dhaka, Bangladesh</small>
+</footer>
+</div>
 
 
-
-
-
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<!--javascript-->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
