--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!--navbar-->
   <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between bg-white">
-        <a class="navbar-brand" href="#"> <img class="w-75" src="logo.png" alt=""> </a>
+        <a class="navbar-brand" href="#"> <img class="w-75" src="logo/logo.png" alt=""> </a>
         <div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
