--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css" />
-    <title>Hot Gadgets</title>
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css" />
+  <title>Hot Gadgets</title>
+</head>
 
 <body>
 
   <!--navbar-->
   <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between bg-white">
-        <a class="navbar-brand" href="#"> <img class="w-75" src="logo/logo.png" alt=""> </a>
-        <div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between bg-white">
+      <a class="navbar-brand" href="#"> <img class="w-75" src="logo/logo.png" alt=""> </a>
+      <div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -32,64 +30,69 @@
             <a class="nav-item nav-link" href="#">Contact US</a>
           </div>
         </div>
-        </div>
-      </nav>
-    </div>
-
-    <!--carousel-->   
-    <div class="container">
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="row  d-flex align-items-center">
-              <div class="col-md-6">
-                <h2>MacBook Pro</h2>
-                <p class="text-muted"><small>Contrary to popular belief, Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptate, provident obcaecati magni eum nemo.</small></p>
-                    <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
-                  </div>
-              <div class="col-md-6"> <img src="banner-products/product-1.png" class="d-block w-100" alt="..."></div>
-            </div>
-          </div>
-
-          <div class="carousel-item">
-            <div class="row  d-flex align-items-center">
-              <div class="col-md-6">
-                <h2>Google Mini</h2>
-                <p class="text-muted"><small>LContrary to popular belief, Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptate, provident obcaecati magni eum nemo.</small></p>
-                    <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
-                  </div>
-              <div class="col-md-6"> <img src="banner-products/slider-1.png" class="d-block w-100" alt="..."></div>
-          </div>
-        </div>
-          
-          <div class="carousel-item">
-            <div class="row d-flex align-items-center">
-              <div class="col-md-6">
-                <h2>JBL Speaker</h2>
-                <p class="text-muted"><small>Contrary to popular belief, Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptate, provident obcaecati magni eum nemo.</small></p>
-                <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
-              </div>
-              <div class="col-md-6">
-                <img src="banner-products/slider-3.png" class="d-block w-100" alt="...">
-              </div>
-            </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
-    </div> <br>
+    </nav>
+  </div>
+
+  <!--carousel-->
+  <div class="container">
+    <img class="img" src="background/bg-1.png" alt="">
+    <img class="img2" src="background/bg-2.png" alt="">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="row  d-flex align-items-center">
+            <div class="col-md-6">
+              <h2>MacBook Pro</h2>
+              <p class="text-muted"><small>Contrary to popular belief, Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Nobis voluptate, provident obcaecati magni eum nemo.</small></p>
+              <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
+            </div>
+            <div class="col-md-6"> <img src="banner-products/product-1.png" class="d-block w-100" alt="..."></div>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <div class="row  d-flex align-items-center">
+            <div class="col-md-6">
+              <h2>Google Mini</h2>
+              <p class="text-muted"><small>LContrary to popular belief, Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Nobis voluptate, provident obcaecati magni eum nemo.</small></p>
+              <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
+            </div>
+            <div class="col-md-6"> <img src="banner-products/slider-1.png" class="d-block w-100" alt="..."></div>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <div class="row d-flex align-items-center">
+            <div class="col-md-6">
+              <h2>JBL Speaker</h2>
+              <p class="text-muted"><small>Contrary to popular belief, Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Nobis voluptate, provident obcaecati magni eum nemo.</small></p>
+              <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
+            </div>
+            <div class="col-md-6">
+              <img src="banner-products/slider-3.png" class="d-block w-100" alt="...">
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div> <br>
 
   <!--Smartphone-->
   <div class="container">
@@ -103,7 +106,7 @@
         <img src="phone/phone-2.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">iPhone 11 Pro</h5>
-          <p class="card-text">Sone quick example text to build on the card title.</p> 
+          <p class="card-text">Sone quick example text to build on the card title.</p>
           <h4>$999</h4>
           <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
         </div>
@@ -129,101 +132,108 @@
         </div>
       </div>
     </div>
-</div> <br>
-
-<!--Laptop-->
-<div class="container">
-  <div class="d-flex justify-content-between">
-    <h4>Laptop</h4>
-    <p><small id="see">See All</small></p>
   </div> <br>
-  <div class="card-deck text-center">
-    <div class="card">
-      <img src="laptop/product-1.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Asus Vivobook</h5>
-        <p class="card-text">Some quick example text to build on the card title.</p>
-        <h4>$699</h4>
-        <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
-      </div>
-    </div>
-    <div class="card">
-      <img src="laptop/product-2.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Razer Blade 15</h5>
-        <p class="card-text">Some quick example text to build on the card title.</p>
-        <h4>$699</h4>
-        <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
-      </div>
-    </div>
-    <div class="card">
-      <img src="laptop/product-3.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Xiaomi Mi Notebook Pro</h5>
-        <p class="card-text">Some quick example text to build on the card title.</p>
-        <h4>$699</h4>
-        <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
-      </div>
-    </div>
-  </div>
-</div> <br>
 
-<!--categories-->
+  <!--Laptop-->
   <div class="container">
-  <div class="d-flex flex-column align-items-center">
-    <h4>Categories</h4>
-    <div class="underline-block"></div>
-  </div> <br><br>
-  
-  <div class="row">
-    <div class="col-md-3 d-flex flex-column justify-content-center">
-      <div class="card d-flex align-items-center">
-        <img src="categories/bag.png" class="card-img-top w-50 pt-4 " alt="...">
+    <div class="d-flex justify-content-between">
+      <h4>Laptop</h4>
+      <p><small id="see">See All</small></p>
+    </div> <br>
+    <div class="card-deck text-center">
+      <div class="card">
+        <img src="laptop/product-1.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Bag</h5>
+          <h5 class="card-title">Asus Vivobook</h5>
+          <p class="card-text">Some quick example text to build on the card title.</p>
+          <h4>$699</h4>
+          <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
+        </div>
+      </div>
+      <div class="card">
+        <img src="laptop/product-2.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Razer Blade 15</h5>
+          <p class="card-text">Some quick example text to build on the card title.</p>
+          <h4>$699</h4>
+          <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
+        </div>
+      </div>
+      <div class="card">
+        <img src="laptop/product-3.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Xiaomi Mi Notebook Pro</h5>
+          <p class="card-text">Some quick example text to build on the card title.</p>
+          <h4>$699</h4>
+          <button type="button" class="btn btn-dark">Buy Now <i class="fa fa-arrow-right"></i></button>
         </div>
       </div>
     </div>
-    <div class="col-md-3 ">
-      <div class="card d-flex align-items-center mb-3">
-        <img src="categories/perfume.png" class="card-img-top w-50 pt-4" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Beauty</h5>
+  </div> <br>
+
+  <!--categories-->
+  <div class="container">
+    <div class="d-flex flex-column align-items-center">
+      <h4>Categories</h4>
+      <div class="underline-block"></div>
+    </div> <br><br>
+
+    <div class="row">
+      <div class="col-md-3 d-flex flex-column justify-content-center">
+        <div class="card d-flex align-items-center">
+          <img src="categories/bag.png" class="card-img-top w-50 pt-4 " alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Bag</h5>
+          </div>
         </div>
       </div>
-      <div class="card d-flex align-items-center mb-3">
-        <img src="categories/shoe.png" class="card-img-top w-50 pt-4" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Shoes</h5>
+      <div class="col-md-3 ">
+        <div class="card d-flex align-items-center mb-3">
+          <img src="categories/perfume.png" class="card-img-top w-50 pt-4" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Beauty</h5>
+          </div>
+        </div>
+        <div class="card d-flex align-items-center mb-3">
+          <img src="categories/shoe.png" class="card-img-top w-50 pt-4" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Shoes</h5>
+          </div>
         </div>
       </div>
+      <div class="col-md-6">
+        <img src="categories/pale-order.png" class="img-fluid" alt="">
+      </div>
+    </div> <br> <br>
+
+    <!--Contact-->
+    <div id="contact" class="container d-flex justify-content-center align-items-center">
+      <div>
+        <h3>LET'S STAY IN TOUCH</h3>
+        <h6>Get updates on sales, specials and more</h6>
+        <input class="form-control" type="Enter your email"> <br>
+        <button type="button" class="btn btn-dark">Submit <i class="fa fa-arrow-right"></i></button>
+      </div>
     </div>
-    <div class="col-md-6">
-      <img src="categories/pale-order.png" class="img-fluid" alt="">
+
+    <!--Footer-->
+    <div class="container footer">
+      <footer>
+        <small>©2023, Hot Gadgets. All right reserved by Muktadir Rahman. Dhaka, Bangladesh</small>
+      </footer>
     </div>
-  </div> <br> <br>
-
-  <!--Contact-->
-  <div id="contact" class="container d-flex justify-content-center align-items-center">
-    <div>
-     <h3>LET'S STAY IN TOUCH</h3>
-     <h6>Get updates on sales, specials and more</h6>
-     <input class="form-control" type="Enter your email"> <br>
-     <button type="button" class="btn btn-dark">Submit <i class="fa fa-arrow-right"></i></button>
-    </div>
- </div>
-
-<!--Footer-->
-<div class="container footer">
-<footer>
-  <small>©2023, Hot Gadgets. All right reserved by Muktadir Rahman. Dhaka, Bangladesh</small>
-</footer>
-</div>
 
 
-<!--javascript-->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <!--javascript-->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"></script>
 </body>
+
 </html>
